--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <video id="background-video" autoplay muted loop>
+        <video id="video-original" autoplay muted loop>
             <source src="video/fondo.mp4" type="video/mp4">
             Tu navegador no soporta la etiqueta de video.
         </video>
